--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ logging.level.root=info
 
 #hello.springmvc ???? ? ?? ?? ?? ?? (???? ???? ??)
 logging.level.hello.springmvc=debug
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
