--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
 #?? ?? ?? ??(?? info)
 logging.level.root=info
 
-#hello.springmvc ???? ? ?? ?? ?? ?? (???? ???? ??)
+#hello.springmvc ???? ? ?? ?? ?? ??
 logging.level.hello.springmvc=debug
-
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
